--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -14,6 +14,18 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+jar {
+    manifest{
+        attributes 'Main-Class': 'Main'
+        
+    }
+}
+
 test {
     useJUnitPlatform()
 }
+
+application {
+    mainClass = 'Main'
+}
+
